# EasyNavigation

./: .gitignore  .gitmodules  CNAME  Configuration_8cpp.html  Configuration_8cpp__incl.map  Configuration_8cpp__incl.md5  Configuration_8hpp.html  Configuration_8hpp__dep__incl.map  Configuration_8hpp__dep__incl.md5  Configuration_8hpp__incl.map  Configuration_8hpp__incl.md5  Configuration_8hpp_source.html  ControllerNode_8cpp.html  ControllerNode_8cpp__incl.map  ControllerNode_8cpp__incl.md5  ControllerNode_8hpp.html  ControllerNode_8hpp__dep__incl.map  ControllerNode_8hpp__dep__incl.md5  ControllerNode_8hpp__incl.map  ControllerNode_8hpp__incl.md5  ControllerNode_8hpp_source.html  Controller_8cpp.html  Controller_8cpp__incl.map  Controller_8cpp__incl.md5  Controller_8hpp.html  Controller_8hpp__dep__incl.map  Controller_8hpp__dep__incl.md5  Controller_8hpp_source.html  DummyController_8cpp.html  DummyController_8cpp__incl.map  DummyController_8cpp__incl.md5  DummyController_8hpp.html  DummyController_8hpp__dep__incl.map  DummyController_8hpp__dep__incl.md5  DummyController_8hpp__incl.map  DummyController_8hpp__incl.md5  DummyController_8hpp_source.html  DummyLocalizer_8cpp.html  DummyLocalizer_8cpp__incl.map  DummyLocalizer_8cpp__incl.md5  (+684 more)
.github/: Doxyfile
.github/workflows/: doxygen-doc.yml  rolling.yaml
docs/: design.md
docs/fig_srcs/: GeneralDesign.drawio  easynav_goalsmanager_design.drawio
easynav_common/: CMakeLists.txt  package.xml
easynav_common/include/easynav_common/: Configuration.hpp  RTTFBuffer.hpp  Result.hpp  Singleton.hpp  YTSession.hpp
easynav_common/include/easynav_common/types/: MapTypeBase.hpp  NavState.hpp  Perceptions.hpp
easynav_common/src/easynav_common/: Configuration.cpp  Perceptions.cpp
easynav_common/src/easynav_common/types/: MapTypeBase.cpp  Perceptions.cpp
easynav_common/tests/: CMakeLists.txt  perceptionsops_tests.cpp
easynav_controller/: CMakeLists.txt  easynav_controller_plugins.xml  package.xml
easynav_controller/include/easynav_controller/: ControllerNode.hpp  ControllerNodeBase.hpp  DummyController.hpp
easynav_controller/src/: controller_main.cpp
easynav_controller/src/easynav_controller/: ControllerNode.cpp  ControllerNodeBase.cpp  DummyController.cpp
easynav_core/: CMakeLists.txt  package.xml
easynav_core/include/easynav_core/: Configuration.hpp  Controller.hpp  ControllerMethodBase.hpp  EasyNav.hpp  EasyNavNode.hpp  Localizer.hpp  LocalizerMethodBase.hpp  Mapper.hpp  MapsManagerBase.hpp  MethodBase.hpp  Planner.hpp  PlannerMethodBase.hpp  Result.hpp
easynav_core/src/: easynav_main.cpp
easynav_core/src/easynav_core/: Configuration.cpp  Controller.cpp  ControllerMethodBase.cpp  EasyNav.cpp  EasyNavNode.cpp  Localizer.cpp  LocalizerMethodBase.cpp  Mapper.cpp  Planner.cpp  PlannerMethodBase.cpp
easynav_core/test/: CMakeLists.txt  core_method_test.cpp
easynav_interfaces/: CMakeLists.txt  package.xml
easynav_interfaces/msg/: NavigationControl.msg  NavigationStatus.msg
easynav_localizer/: CMakeLists.txt  easynav_localizer_plugins.xml  package.xml
easynav_localizer/include/easynav_localizer/: DummyLocalizer.hpp  LocalizerNode.hpp  LocalizerNodeBase.hpp
easynav_localizer/src/: localizer_main.cpp
easynav_localizer/src/easynav_localizer/: DummyLocalizer.cpp  LocalizerNode.cpp  LocalizerNodeBase.cpp
easynav_maps/: CMakeLists.txt  package.xml
easynav_maps/include/easynav_maps/: MapsNode.hpp
easynav_maps/src/: maps_main.cpp
easynav_maps/src/easynav_maps/: MapsNode.cpp
easynav_maps_manager/: CMakeLists.txt  easynav_maps_manager_plugins.xml  package.xml
easynav_maps_manager/include/easynav_maps_manager/: DummyMapsManager.hpp  MapTypeBase.hpp  MapsManagerBase.hpp  MapsManagerNode.hpp  MapsManagerNodeBase.hpp
easynav_maps_manager/src/: maps_manager_main.cpp
easynav_maps_manager/src/easynav_maps_manager/: DummyMapsManager.cpp  MapsManagerNode.cpp  MapsManagerNodeBase.cpp
easynav_planner/: CMakeLists.txt  easynav_planner_plugins.xml  package.xml
easynav_planner/include/easynav_planner/: DummyPlanner.hpp  PlannerNode.hpp  PlannerNodeBase.hpp
easynav_planner/src/: planner_main.cpp
easynav_planner/src/easynav_planner/: DummyPlanner.cpp  PlannerNode.cpp  PlannerNodeBase.cpp
easynav_ros/: CMakeLists.txt  package.xml
easynav_ros/include/easynav_ros/: EasyNavNode.hpp
easynav_ros/params/: easynav_params.yaml
easynav_ros/src/: easynav_main.cpp
easynav_ros/src/easynav_ros/: EasyNavNode.cpp
easynav_sensors/: CMakeLists.txt  package.xml
easynav_sensors/include/easynav_sensors/: Perceptions.hpp  SensorsNode.hpp  SensorsNodeBase.hpp  SensorsUtils.hpp
easynav_sensors/src/: sensors_main.cpp
easynav_sensors/src/easynav_sensors/: Perceptions.cpp  SensorsNode.cpp  SensorsNodeBase.cpp  SensorsUtils.cpp
easynav_sensors/tests/: CMakeLists.txt  sensors_node_tests.cpp
easynav_system/: CMakeLists.txt  package.xml
easynav_system/include/easynav_system/: GoalManager.hpp  GoalManagerClient.hpp  SystemNode.hpp
easynav_system/src/: system_main.cpp
easynav_system/src/easynav_system/: GoalManager.cpp  GoalManagerClient.cpp  SystemNode.cpp
easynav_system/tests/: CMakeLists.txt  goalmanager_tests.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+46 more)
